@@ -34,9 +34,9 @@ import java.io.IOException;
  * HttpFSServer server, it is a <code>javax.servlet.ServletContextListener
  * </code> implementation that is wired in HttpFSServer's WAR
  * <code>WEB-INF/web.xml</code>.
- * <p/>
+ * <p>
  * It provides acces to the server context via the singleton {@link #get}.
- * <p/>
+ * <p>
  * All the configuration is loaded from configuration properties prefixed
  * with <code>httpfs.</code>.
  */
