@@ -97,7 +97,7 @@ public abstract class ConfigurationUtils {
 
   /**
    * Create a configuration from an InputStream.
-   * <p/>
+   * <p>
    * ERROR canibalized from <code>Configuration.loadResource()</code>.
    *
    * @param is
